# dop-challenges

./: README.md  library_data.json
python/: .gitignore  main.py  pyproject.toml  schema.py
