[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "mypy>=1.0.1",
    "flake8>=6.0.0",
    "bandit>=1.7.4",
    "setuptools>=67.4.0",
    "vulture>=2.7",
    "pytest>=7.2.1",
    "pytest-asyncio>=0.20.3",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ChihYu Yeh", email = "chihyu.jimmy.yeh@gmail.com"},
]
dependencies = [
    "python-arango>=7.5.7",
    "tqdm>=4.65.0",
    "pydantic>=1.10.6",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.vulture]
min_confidence = 100

[tool.pytest.ini_options]
adopts = "--showlocals"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.pdm.scripts]
format-black = "black src/ tests/"
format-isort = "isort src tests"
format = {composite = ["format-black", "format-isort"]}
lint-bandit = "bandit -r src/"
lint-black = "black --check --diff src/ tests/"
lint-flake8 = "flake8 src/ tests/"
lint-isort = "isort --check --diff src tests"
lint-mypy = "mypy src tests"
lint-vulture = "vulture src"
lint = {composite = ["lint-bandit", "lint-black", "lint-flake8", "lint-isort", "lint-mypy", "lint-vulture"]}
test = "pytest tests/"